--- a/UnityProjects/MRTKDevTemplate/Packages/manifest.json
+++ b/UnityProjects/MRTKDevTemplate/Packages/manifest.json
@@ -1,7 +1,7 @@
 {
   "dependencies": {
-    "com.atteneder.gltfast": "file:C:/Users/PC/Downloads/glTFast-main",
-    "com.atteneder.ktx": "file:C:/Users/PC/Downloads/KtxUnity-main",
+    "com.atteneder.gltfast": "file:C:/Users/GSN PG/Downloads/glTFast-main",
+    "com.atteneder.ktx": "file:C:/Users/GSN PG/Downloads/KtxUnity-main",
     "com.microsoft.azure.remote-rendering": "file:MixedReality/com.microsoft.azure.remote-rendering-1.2.3.tgz",
     "com.microsoft.azure.spatial-anchors-sdk.core": "file:MixedReality/com.microsoft.azure.spatial-anchors-sdk.core-2.14.1.tgz",
     "com.microsoft.azure.spatial-anchors-sdk.windows": "file:MixedReality/com.microsoft.azure.spatial-anchors-sdk.windows-2.14.1.tgz",
